
	* CashShopStaging is now an implementation of IInventory rather than an
	extension of Inventory because it has no concept of slot positions.
	* Implemented ShopCharacter persistence. State is committed whenever the
	save character packet is received and when the player exits the shop.
	* Use AtomicIntegers for keeping track of cash because volatile array
	elements are a pain to implement.
	* Implemented buying of items from cash shop and transferring cash items to
	and from staging. Added code stubs for more cash shop operations.

2013-08-08  GoldenKevin  (revision 222)

	* Players get their buddy list updated if a buddy in the cash shop exits the
	shop without returning to a channel, e.g. by crashing or hitting Alt-F4.
	* Buddy discovery now works for players in the cash shop. Logging into a
	character with a buddy in the cash shop will show that buddy as in the cash
	shop as opposed to offline.
	* Display all queued buddy invites when a player leaves the cash shop in
	case another player sent an invite while the recipient was in the shop and
	unable to respond.
	* Fixed whisper and /find command reporting that offline players are in the
	cash shop.

2013-08-09  GoldenKevin  (revision 223)

	* Implemented cash item gifting in the cash shop.
	* Cleaned up cash shop packets.

2013-08-10  GoldenKevin  (revision 224)

	* Fixed expiration date overflow when buying from the cash shop.
	* Downgraded incorrectly assigned CERTAIN_PACKET_EDITING infractions to
	POSSIBLE_PACKET_EDITING in cash shop handling.
	* Send error messages to players when they get an infraction to help with
	debugging wrongful cheat tracker checks.
	* Implemented wish list changes.
	* Implemented inventory expansion from the cash shop.

2013-08-10  GoldenKevin  (revision 225)

	* Implemented coupon codes in cash shop.

Copyright 2011-2013 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.